--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "merge-umi-mock-data",
-  "version": "0.0.3",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,20 +20,22 @@
   "dependencies": {
     "@babel/core": "^7.0.0-rc.2",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0-rc.2",
+    "@babel/preset-env": "^7.2.3",
     "@babel/register": "^7.0.0-rc.2",
     "@babel/runtime": "^7.0.0-rc.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-dynamic-import-node-sync": "^2.0.1",
-    "babel-preset-env": "^1.7.0",
+    "chalk": "^2.4.2",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^4.0.0-beta.8",
-    "rollup-plugin-commonjs": "^9.1.5",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-multi-entry": "^2.0.2",
+    "rollup": "^1.0.2",
+    "rollup-plugin-babel": "^4.2.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-multi-entry": "^2.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "standard-version": "^4.4.0"
   }
 }
