--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.0.0",
+    "slash2": "^2.0.0",
     "standard-version": "^4.4.0"
   }
 }
