--- a/package.json
+++ b/package.json
@@ -18,22 +18,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-typescript": "^7.3.3",
     "chalk": "^2.4.2",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
-    "rollup": "^1.12.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.0.0",
     "slash2": "^2.0.0",
-    "standard-version": "^4.4.0"
+    "standard-version": "^4.4.0",
+    "umi-library": "^1.6.0"
   },
   "devDependencies": {}
 }
